src/tests/functionality/assignment_4_control_flow/valid/04_break_in_loop.c
int main() {
    int x = 0;

    while (x < 10) {
        if (x == 4) {
            break;
        }

        x = x + 1;
    }

    return x;
}