src/tests/functionality/assignment_4_control_flow/invalid_semantic/01_break_outside_loop_or_switch.c
int main() {
    int x = 0;

    break;

    return x;
}